# mega-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
examples/: checksum_comparison.rs  condensed_mac_comparison.rs  public_file_download.rs  public_folder_listing.rs  sha256.rs  simple_delete.rs  simple_download.rs  simple_mkdir.rs  simple_move.rs  simple_rename.rs  simple_upload.rs  thumbnail_upload.rs  tree_listing.rs
src/: attributes.rs  commands.rs  error.rs  events.rs  fingerprint.rs  lib.rs  sessions.rs  utils.rs
src/http/: mod.rs  reqwest.rs
src/protocol/: commands.rs  events.rs  mod.rs
src/utils/: mod.rs  rsa.rs
tests/: event_updates.rs  login.rs  protected_file_fetch.rs  session_resumption.rs  upload_and_download.rs
