[package]
name = "mega"
version = "0.7.4"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "An API client library for interacting with MEGA"
repository = "https://github.com/Hirevo/mega-rs"
documentation = "https://docs.rs/mega"
keywords = ["mega", "api", "cloud", "storage"]
categories = ["api-bindings", "web-programming", "web-programming::http-client"]
license = "MIT OR Apache-2.0"

[dependencies]
# (De)serialization
json = { version = "1.0.97", package = "serde_json" }
serde = { version = "1.0.164", features = ["derive"] }
serde_repr = "0.1.12"
base64 = "0.21.2"

# Async helpers
async-trait = "0.1.68"
futures = "0.3.28"
sluice = "0.5.5"

# Error handling
thiserror = "1.0.40"

# Miscellaneous
url = "2.4.0"
rand = "0.8.5"
chrono = "0.4.26"
static_assertions = "1.1.0"
zeroize = { version = "1.7.0", features = ["derive"] }

# Cryptography
aes = "0.8.2"
cbc = "0.1.2"
ctr = "0.9.2"
rsa = "0.9.2"
sha2 = "0.10.7"
cipher = { version = "0.4.4", features = ["block-padding"] }
aes-gcm = { version = "0.10.2", features = ["std"] }
pbkdf2 = "0.12.1"
hkdf = { version = "0.12.3", features = ["std"] }
num-bigint-dig = { version = "0.8.4", features = ["zeroize"] }

# Checksum computation
crc32fast = "1.3.2"
hmac = "0.12.1"

# `reqwest` support
reqwest = { version = "0.11.18", features = ["json", "stream"], optional = true }
tokio = { version = "1.28.2", features = ["time"], optional = true }
tokio-util = { version = "0.7.8", features = ["compat", "codec"], optional = true }

# Logging
tracing = "0.1.40"
secrecy = { version = "0.8.0", features = ["serde"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:tokio", "dep:tokio-util"]

[dev-dependencies]
async-read-progress = "0.2.0"
console = "0.15.7"
hex = "0.4.3"
indicatif = "0.17.5"
sha2 = "0.10.7"
text_trees = "0.1.2"
tokio = { version = "1.28.2", features = ["macros"] }
