[package]
name = "mega"
version = "0.8.0"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "An API client library for interacting with MEGA"
repository = "https://github.com/Hirevo/mega-rs"
documentation = "https://docs.rs/mega"
keywords = ["mega", "api", "cloud", "storage"]
categories = ["api-bindings", "web-programming", "web-programming::http-client"]
license = "MIT OR Apache-2.0"

[dependencies]
# (De)serialization
json = { version = "1.0.128", package = "serde_json" }
serde = { version = "1.0.210", features = ["derive"] }
serde_repr = "0.1.19"
base64 = "0.22.1"

# Async helpers
async-trait = "0.1.83"
futures = "0.3.31"
sluice = "0.5.5"

# Error handling
thiserror = "1.0.64"

# Miscellaneous
url = "2.5.2"
rand = "0.8.5"
chrono = "0.4.38"
static_assertions = "1.1.0"
zeroize = { version = "1.8.1", features = ["derive"] }

# Cryptography
aes = "0.8.4"
cbc = "0.1.2"
ctr = "0.9.2"
rsa = "0.9.6"
sha2 = "0.10.8"
cipher = { version = "0.4.4", features = ["block-padding"] }
aes-gcm = { version = "0.10.3", features = ["std"] }
pbkdf2 = "0.12.2"
hkdf = { version = "0.12.4", features = ["std"] }
num-bigint-dig = { version = "0.8.4", features = ["zeroize"] }

# Checksum computation
crc32fast = "1.4.2"
hmac = "0.12.1"

# `reqwest` support
reqwest = { version = "0.12.8", features = ["json", "stream"], optional = true }
tokio = { version = "1.40.0", features = ["time"], optional = true }
tokio-util = { version = "0.7.12", features = ["compat", "codec"], optional = true }

# Logging
tracing = "0.1.40"
secrecy = { version = "0.10.2", features = ["serde"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:tokio", "dep:tokio-util"]

[dev-dependencies]
async-read-progress = "0.2.0"
console = "0.15.8"
hex = "0.4.3"
indicatif = "0.17.8"
sha2 = "0.10.8"
text_trees = "0.1.2"
tokio = { version = "1.40.0", features = ["macros"] }
